Added animations, fixed buttons
Fixed

Button hover state
Button call to number

Added:
Fly in animations to hero section

--- a/src/app.html
+++ b/src/app.html
@@ -4,6 +4,8 @@
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width" />
+		<title>Verve Solutions: Bespoke IT Services</title>
+		<meta name="description" content="Headache-free client-focused IT solutions customized for your company's unique needs" />
 		%sveltekit.head%
 	</head>
 	<body class="pb-12" data-sveltekit-preload-data="hover">
