--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 		<meta name="description" content="Headache-free client-focused IT solutions customized for your company's unique needs" />
 		<meta http-equiv="content-security-policy" content="">
 		<link href="./_app/immutable/assets/_layout.fe2c66ce.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.12839946.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.47cd2fce.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.b18ef51e.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.458216a6.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.12c957de.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.611ba763.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.063c70fe.js">
 		<link rel="modulepreload" href="./_app/immutable/entry/_layout.svelte.4003a24b.js">
 		<link rel="modulepreload" href="./_app/immutable/entry/_layout.js.984db11e.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/_layout.da46b06b.js">
@@ -40,7 +40,7 @@
 			
 			<script>
 				{
-					__sveltekit_19syw7r = {
+					__sveltekit_1dhxxbl = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -50,8 +50,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.12839946.js"),
-						import("./_app/immutable/entry/app.12c957de.js")
+						import("./_app/immutable/entry/start.47cd2fce.js"),
+						import("./_app/immutable/entry/app.063c70fe.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
